--- a/styles/main.css
+++ b/styles/main.css
@@ -18,13 +18,18 @@ h1,h2,h3,h4,h5,h6 {
   letter-spacing: 2px;
 }
 
-.container {
+.form-container {
 	display:flex;
 	flex-direction: column;
 }
 
 .date, .topic, .entry, .mood {
-	border: rgb(48, 11, 107) 5px solid ;
+	border: #4CAF50 5px solid;
 	margin: 5px;
 	padding: 2%;
 }
+body {
+	background-color: #5f5f5f;
+	color: white;
+}
+
